# datum-eda

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  PLAN.md  README.md
crates/cli/: Cargo.toml
crates/cli/src/: cli_args.rs  cli_args_artifact.rs  cli_args_board_component.rs  cli_args_board_dimension.rs  cli_args_check.rs  cli_args_commands.rs  cli_args_context.rs  cli_args_gerber_plan.rs  cli_args_inventory.rs  cli_args_journal.rs  cli_args_manufacturing.rs  cli_args_mods.rs  cli_args_native_support.rs  cli_args_output.rs  cli_args_pool.rs  cli_args_prelude.rs  cli_args_project_command_args_artifacts.rs  cli_args_project_command_args_board.rs  cli_args_project_command_args_board_handoff.rs  cli_args_project_command_args_schematic_connectivity.rs  cli_args_project_command_args_schematic_symbols.rs  cli_args_project_commands.rs  cli_args_project_component_instances.rs  cli_args_project_import.rs  cli_args_project_journal.rs  cli_args_project_library.rs  cli_args_project_library_footprint.rs  cli_args_project_library_part_bindings.rs  cli_args_project_library_pin_pad_map.rs  cli_args_project_library_symbol_pin.rs  cli_args_project_output_jobs.rs  cli_args_project_proposals.rs  cli_args_project_query_plan.rs  cli_args_project_waivers.rs  cli_args_proposal_library.rs  cli_args_proposals.rs  cli_args_root.rs  cli_args_surface.rs  cli_symbol_views.rs  command_context.rs  (+453 more)
crates/cli/src/args/: artifact.rs  check.rs  context.rs  drill.rs  inventory.rs  journal.rs  manufacturing.rs  mod.rs  prelude.rs  project.rs  project_command_args_artifacts.rs  project_command_args_board.rs  project_command_args_board_handoff.rs  project_command_args_schematic_connectivity.rs  project_command_args_schematic_symbols.rs  project_component_instances.rs  project_import.rs  project_journal.rs  project_library.rs  project_library_footprint.rs  project_library_part_bindings.rs  project_library_pin_pad_map.rs  project_library_symbol_pin.rs  project_output_jobs.rs  project_proposals.rs  project_query_plan.rs  project_waivers.rs  proposal_library.rs  proposals.rs  root.rs  surface.rs
crates/cli/src/command_modify/: mod.rs  modify_ops.rs  parse_args.rs
crates/cli/src/command_project/: command_project_inventory.rs  command_project_inventory_csv.rs  command_project_inventory_surface.rs  command_project_schematic_sheet_mutations.rs
crates/cli/src/command_query/: mod.rs  query_check.rs  query_ops.rs  query_views.rs
crates/cli/src/commands/: dispatch.rs  mod.rs  prelude.rs  project_core.rs  support.rs  views.rs
crates/cli/src/context/: active.rs  activity.rs  mod.rs  production.rs  proposals.rs
crates/cli/src/main_tests/: main_tests_context.rs  main_tests_context_source_shards.rs  main_tests_context_terminal_lifecycle.rs  main_tests_modify_advanced_plan.rs  main_tests_modify_basic.rs  main_tests_plan_apply_compare_artifact.rs  main_tests_plan_apply_inspect_artifact.rs  main_tests_plan_apply_legacy_manifest.rs  main_tests_plan_apply_text.rs  main_tests_plan_apply_validate.rs  main_tests_project_board_component.rs  main_tests_project_board_component_mechanical.rs  main_tests_project_board_component_models_3d.rs  main_tests_project_board_component_pads.rs  main_tests_project_board_component_pool_materialization.rs  main_tests_project_board_component_query_single.rs  main_tests_project_board_component_replacement_proposal.rs  main_tests_project_board_connectivity.rs  main_tests_project_board_keepout.rs  main_tests_project_board_net_class.rs  main_tests_project_board_pad.rs  main_tests_project_board_stackup.rs  main_tests_project_board_text.rs  main_tests_project_board_zone_fill_solver.rs  main_tests_project_bom_compare.rs  main_tests_project_bom_export.rs  main_tests_project_bom_validate.rs  main_tests_project_check_run_drc_lifecycle.rs  main_tests_project_check_run_history.rs  main_tests_project_drc.rs  main_tests_project_drill_compare.rs  main_tests_project_drill_export.rs  main_tests_project_drill_inspect.rs  main_tests_project_drill_validate.rs  (+100 more)
crates/cli/tests/: verb_registry_roundtrip.rs
crates/engine/: Cargo.toml
crates/engine/src/: error.rs  lib.rs
crates/engine/src/api/: mod.rs  (+13 more)
crates/gui-app/: Cargo.toml
crates/gui-app/src/: app_bootstrap.rs  app_shell.rs  artifact_preview_controls.rs  assistant_bridge.rs  board_text_terminal_commands.rs  gui_runtime_support.rs  interaction_refresh.rs  main.rs  pan_gesture.rs  pane_cameras.rs  pane_grid_lod.rs  pane_resize.rs  production_status_refresh.rs  retained_scene_cache_key.rs  runtime_board_text_edit.rs  runtime_camera_fit_targets.rs  runtime_camera_pane.rs  runtime_terminal_context.rs  runtime_view_actions.rs  terminal_active_context.rs  terminal_active_context_tests.rs  terminal_activity_snapshot.rs  terminal_agent_launcher.rs  terminal_check_context.rs  terminal_context.rs  terminal_context_contract.rs  terminal_context_io.rs  terminal_input.rs  terminal_journal_context.rs  terminal_proposal_context.rs  terminal_screen.rs  terminal_session.rs  terminal_session_context.rs  terminal_session_context_tests.rs  terminal_session_controls.rs  terminal_session_events.rs  terminal_session_tests.rs
crates/gui-app/tests/: visual_shell.rs
crates/gui-render/: Cargo.toml
crates/gui-render/src/: bottom_dock.rs  design_artboards.rs  design_tokens.rs  dim_policy.rs  inspector_check_finding.rs  layout_invariant_tests.rs  lib.rs  lib_extra_tests.rs  marking_menu.rs  menu_chrome.rs  outputs_artifact_runs.rs  outputs_lane.rs  outputs_lane_layout.rs  outputs_lane_sections.rs  outputs_preview.rs  outputs_preview_controls.rs  outputs_proposals.rs  outputs_run_commands.rs  render_contract_tests.rs  retained_draw_order_tests.rs  side_panels.rs  source_shard_panel.rs  supervision_dock.rs  terminal_dock_contract_tests.rs  visual_capture.rs  visual_diff.rs  visual_manifest.rs  visual_runner.rs
crates/gui-render/tests/: outputs_run_commands.rs  selection_ownership.rs  visual_goldens.rs
crates/test-harness/: Cargo.toml
crates/test-harness/src/: lib.rs
(+1267 files in other folders)
