[package]
name = "eda-engine"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
uuid.workspace = true
thiserror.workspace = true
sha2.workspace = true
quick-xml.workspace = true

[dev-dependencies]
proptest.workspace = true
