[package]
name = "datum-gui-app"
version.workspace = true
edition.workspace = true

[[bin]]
name = "datum-gui"
path = "src/main.rs"

[dependencies]
datum-gui-protocol = { path = "../gui-protocol" }
datum-gui-render = { path = "../gui-render" }
anyhow.workspace = true
arboard.workspace = true
clap.workspace = true
pollster.workspace = true
serde.workspace = true
serde_json.workspace = true
winit.workspace = true
wgpu.workspace = true
