[package]
name = "datum-gui-app"
version.workspace = true
edition.workspace = true

[features]
visual = ["dep:image", "datum-gui-render/visual"]

[[bin]]
name = "datum-gui"
path = "src/main.rs"

[dependencies]
datum-gui-protocol = { path = "../gui-protocol" }
datum-gui-render = { path = "../gui-render" }
datum-gui-viewport = { path = "../gui-viewport" }
anyhow.workspace = true
arboard.workspace = true
clap.workspace = true
image = { version = "0.25.10", optional = true }
libc.workspace = true
pollster.workspace = true
serde.workspace = true
serde_json.workspace = true
winit.workspace = true
wgpu.workspace = true

[dev-dependencies]
eda-engine = { path = "../engine" }
uuid.workspace = true
